# RCC

./: .gitignore  CMakeLists.txt  colorful_echo.py  execute.bat
code/declarations/: rcc_base_dec.h  rcc_core_dec.h
code/declarations/analyzer/: rcc_ast_dec.h  rcc_parser_dec.h
code/declarations/builtin/: rcc_builtin_dec.h
code/declarations/builtin/dll_extension_manager/: rcc_dll_extension_manager_dec.h
code/declarations/builtin/functions/: rcc_builtin_datatype_functions_dec.h  rcc_builtin_ds_functions_dec.h  rcc_builtin_export_dec.h  rcc_builtin_functions_dec.h  rcc_builtin_import_dec.h  rcc_builtin_io_functions_dec.h  rcc_builtin_lowlevel_functions_dec.h  rcc_builtin_prog_functions_dec.h  rcc_builtin_super_dec.h
code/declarations/components/ri/: rcc_ri_dec.h
code/declarations/components/symbol/: rcc_symbol_dec.h
code/declarations/lib/RJson/: RJson_dec.h
code/include/: rcc_base.h  rcc_core.h  rcc_version.h
code/include/analyzer/: rcc_ast.h  rcc_ast_components.h  rcc_lexer.h  rcc_parser.h
code/include/analyzer/visitors/: rcc_visitor.h
code/include/backend/: rcc_llvm_backend.h  rcc_llvm_types.h
code/include/builtin/: rcc_builtin.h  rcc_builtin_core.h
code/include/builtin/dll_extension_manager/: rcc_dll_extension_manager.h
code/include/builtin/functions/: rcc_builtin_datatype_functions.h  rcc_builtin_ds_functions.h  rcc_builtin_export.h  rcc_builtin_functions.h  rcc_builtin_import.h  rcc_builtin_io_functions.h  rcc_builtin_lowlevel_functions.h  rcc_builtin_prog_functions.h  rcc_builtin_super.h
code/include/components/ri/: rcc_ri.h
code/include/components/symbol/: rcc_symbol.h
code/include/interfaces/: rcc_builtin_interface.h  rcc_compile_interface.h  rcc_interface_dec.h  rcc_object_interface.h  rcc_pos_interface.h  rcc_symbol_interface.h
code/include/internal/: rcc_compile_implementation.h
code/include/lib/: newrcc.h  rcc_utils.h
code/include/lib/RJson/: RJson.h
code/include/lib/RLogSystem/: rlog_system.h
code/include/parser/: rcc_ast.h  rcc_ast_components.h  rcc_lexer.h  rcc_parser.h
code/include/visitors/: rcc_base_visitor.h  rcc_collect_symbol_visitor.h  rcc_compile_visitor.h  rcc_compiler_visitor.h  rcc_json_visitor.h  rcc_llvm_visitor.h  rcc_print_visitor.h  rcc_visitors.h
code/src/: rcc_base.cpp  rcc_core.cpp  rcc_main.cpp
code/src/analyzer/ast/: rcc_ast.cpp  rcc_ast_components.cpp
code/src/analyzer/lexer/: rcc_lexer.cpp
code/src/analyzer/parser/: rcc_parser.cpp  rcc_parser_error.cpp
code/src/backend/: rcc_llvm_backend.cpp  rcc_llvm_types.cpp
code/src/builtin/: rcc_builtin.cpp  rcc_builtin_core.cpp
code/src/builtin/functions/: rcc_builtin_ds_functions.cpp  (+7 more)
code/src/lib/: newrcc.cpp  rcc_utils.cpp
code/src/parser/: rcc_ast.cpp  rcc_ast_conponents.cpp  rcc_lexer.cpp  rcc_parser.cpp
code/src/visitors/: rcc_collect_symbol_visitor.cpp  rcc_compile_visitor.cpp  rcc_function_call_compiler.cpp  rcc_json_visitor.cpp  rcc_llvm_visitor.cpp  rcc_print_visitor.cpp
docs/: rio_doc.md
extensions/test_ext/: compile.bat
extensions/test_ext/code/: main.cpp  random.cpp
logs/: update_logs.md
release/Lib/builtin/: _pure_builtin.rio  datatype.rio  ds.rio  io.rio  lowlevel.rio  math.rio  ops.rio  prog.rio  str.rio
runtime/: build_runtime.bat  build_runtime.sh  rcc_runtime.c  rcc_runtime.h
runtime_lib/: CMakeLists.txt
runtime_lib/include/: rio_runtime.h
runtime_lib/src/: rio_gc.c  rio_object.c  rio_print.c  rio_runtime.c  rio_string.c
scripts/: .env.example  auto_version_increment.py  convert_encoding.py  execute.bat  execute.py  requirements.txt  run.bat  test.bat
scripts/config/: update_config.cache.json
test/: quick_sort.rio  structure.txt  test.json  test.ra  test.rio  test.rsi  test1.rio  test_lib.rio  test_list.rio
test/lib/: lib.rio
test/llvm/: 01_basic_types.rio  02_variables.rio  03_arithmetic.rio  04_comparison.rio  05_logic.rio  06_strings.rio  07_functions.rio  08_while.rio  09_for.rio  10_until.rio  11_conditions.rio  12_list_literal.rio  13_lambda.rio  14_integration_sort.rio  15_integration_math.rio  16_integration_func.rio
test/rio/: computer_guess_number.rio  random.rio  test_ds_list.rio  test_high_level_func.rio  test_inherite.rio  user_guess_number.rio
test/txt/: test.txt
tests/: test.rio  test_anonymous.rio  test_builtins.rio  test_class.rio  test_functions.rio  test_integration.rio  test_literals.rio  test_loops.rio  test_main.rio  test_module_export.rio  test_throw.rio  test_trycatch.rio  test_variables.rio
tests/irs/: test.ll
tests/outputs/: test.output  test_anonymous.output  test_builtins.output  test_class.output  test_collections.output  test_comparisons.output  test_conditions.output  test_functions.output  test_integration.output  test_literals.output  test_loops.output  test_main.output  test_module_export.output  test_throw.output  test_trycatch.output  test_variables.output
tests/rios/: test.rio  test_anonymous.rio  test_builtins.rio  test_collections.rio  test_comparisons.rio  test_conditions.rio  test_functions.rio  test_integration.rio  test_literals.rio  test_main.rio  test_throw.rio  test_trycatch.rio  test_variables.rio
tests/test_10_main/: actual.txt  test.ll  test.rio
tests/test_11_throw/: expected.txt  test.ll  test.rio
tests/test_12_trycatch/: actual.txt  test.ll  test.rio
tests/test_13_compound_assign/: expected.txt  test.rio
tests/test_14_iter/: expected.txt  test.rio
tests/test_15_forinrange/: expected.txt  test.rio
tests/test_16_class_basic/: expected.txt  test.ll  test.rio
tests/test_17_class_inheritance/: expected.txt  test.ll  test.rio
tests/test_1_builtins/: actual.txt  test.ll  test.rio
tests/test_2_variables/: expected.txt  test.ll  test.rio
tests/test_3_literals/: actual.txt  test.ll  test.rio
tests/test_4_comparisons/: actual.txt  test.ll  test.rio
tests/test_5_conditions/: actual.txt  test.ll  test.rio
tests/test_6_functions/: actual.txt  test.ll  test.rio
tests/test_7_anonymous/: test.ll  test.rio
tests/test_8_collections/: actual.txt  test.ll  test.rio  test_dict.rio
tests/test_9_integration/: test.ll  test.rio
(+13 files in other folders)
